@@ -11,6 +11,11 @@ module ActiveSupport #:nodoc:
       #   end
       #
       #   search(options.slice(:mass, :velocity, :time))
+      #
+      # Also allows leaving out certain keys. This is useful when duplicating
+      # a hash but omitting a certain subset:
+      #
+      #   Event.new(event.attributes.without(:id, :user_id))
       module Slice
         # Returns a new hash with only the given keys.
         def slice(*keys)
@@ -21,6 +26,17 @@ module ActiveSupport #:nodoc:
         # Replaces the hash with only the given keys.
         def slice!(*keys)
           replace(slice(*keys))
+        end
+
+        # Returns a new hash without the given keys.
+        def without(*keys)
+          allowed = self.keys - (respond_to?(:convert_key) ? keys.map { |key| convert_key(key) } : keys)
+          slice(*allowed)
+        end
+
+        # Replaces the hash without the given keys.
+        def without!(*keys)
+          replace(without(*keys))
         end
       end
     end
